# omoyde

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json.example
api/: Dockerfile  requirements.txt
api/app/: errors.py  main.py  prelude.py  prestart.sh
api/app/core/: _msg_pybind.py  _widget.py
api/app/models/: __init__.py  (+2 more)
api/msg_pybind/: Cargo.toml
api/widget-pybind/: Cargo.toml
lib/msg_internal/: Cargo.toml  build.rs
lib/widget-core/: Cargo.toml  build.rs
notes/: images.bin.md  metas.bin.md  msg.bin.md  widgets.bin.md
scripts/: butler  picker.py  setup.py  sync.py
scripts/api/: build_docker.py  build_lib.py  run.py
tools/butler/: Cargo.toml
tools/butler/src/: cmd.rs  consts.rs  generator.rs  main.rs  prelude.rs  util.rs
tools/butler/src/_vendors/: mod.rs
tools/butler/src/_vendors/filebuffer/: mod.rs  unix.rs
tools/butler/src/commands/: commit.rs  fix.rs  list.rs  mod.rs  mount.rs  umount.rs
tools/butler/src/commands/generate/: generator.rs  mod.rs
tools/butler/src/commands/index/: link.rs  mod.rs  scanner.rs
tools/butler/src/commands/util/: display.rs
tools/butler/src/db/: locations.rs  mod.rs  mounts.rs
tools/butler/src/db/helpers/: access.rs  entry.rs  handle.rs  index.rs  mod.rs  patch.rs  table.rs
tools/butler/src/db/mounts/: access.rs  index.rs  keys.rs  mod.rs  patch.rs  record.rs  records.rs  serde.rs  table.rs
tools/butler/src/db/photos/: access.rs  entries.rs  index.rs  keys.rs  misc.rs  mod.rs  ops.rs  patch.rs  records.rs  synchronizer.rs  table.rs
tools/butler/src/locations/: mod.rs
tools/msg-decode/: Cargo.toml
tools/widget-decode/: Cargo.toml
web/: package.json  vite.config.js
web/src/: App.vue  main.js
(+60 files in other folders)
